2003-08-06  David N. Welton  <davidw@dedasys.com>

	* fileutil.man: Added documentation for the new 'install' command.

	* fileutil.tcl (::fileutil::install): Added 'install' command,
	which is similar in functionality to the Unix install command - it
	is basically file copy with some additional features.

	* fileutil.test: Added tests for 'install' fileutil command.

2003-07-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Bumped version to 1.5.1 as this is a bug fix. Any bug fixes and
	  more minor changes coming in the future do not have to bump the
	  version number anymore until the next release. Only a major
	  change warrants another bump before the release.

	* fileutil.tcl: Fixed SF tcllib bug [647974]. We now ignore
	  device/inode information if the current path is in a virtual
	  filesystem. We also assume now that VFS's do not support links,
	  thus also obviating the need for the data, circles cannot occur.

2003-05-09  Andreas Kupries  <andreask@activestate.com>

	* fileutil.tcl (::fileutil::tempfile): Braced [expr].

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-05-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* fileutil.tcl:   The touch command cannot be implemented in Tcl
	* fileutil.test:  versions < 8.3 so do not define the command.
	* fileutil.man:   Noted in documentation and skipped tests.

2003-04-23  Andreas Kupries  <andreask@pliers.activestate.com>

	* fileutil.man:
	* fileutil.tcl: Added command [tempfile]. Was part of tcllib patch
	  611595, but has a better place here.

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* fileutil.man:
	* fileutil.tcl:
	* pkgIndex.tcl:  Set version of the package to to 1.5.

2003-04-02  Andreas Kupries  <andreask@activestate.com>

	* fileutil.test (fileutil): Fixed tcllib SF bug #714214 reported
	  by Pat Thoyts, by working around the 'makeFile' command provided